--- a/NLP_sentiment.ipynb
+++ b/NLP_sentiment.ipynb
@@ -41,11 +41,11 @@
    "metadata": {
     "id": "WeQeHuFpfvIU",
     "ExecuteTime": {
-     "end_time": "2023-10-15T12:49:04.013060800Z",
-     "start_time": "2023-10-15T12:49:03.858368600Z"
+     "end_time": "2024-02-12T06:42:32.729913300Z",
+     "start_time": "2024-02-12T06:42:32.722195200Z"
     }
    },
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": []
   },
   {
@@ -58,12 +58,38 @@
    "metadata": {
     "id": "ojoSB8r1gSZl",
     "ExecuteTime": {
-     "end_time": "2023-10-15T12:52:13.079804800Z",
-     "start_time": "2023-10-15T12:52:07.892305200Z"
+     "end_time": "2024-02-12T06:42:33.019230500Z",
+     "start_time": "2024-02-12T06:42:33.012043800Z"
     }
    },
-   "execution_count": 1,
+   "execution_count": 9,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-12T06:42:33.578197700Z",
+     "start_time": "2024-02-12T06:42:33.571689Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-12T06:42:33.967432400Z",
+     "start_time": "2024-02-12T06:42:33.960311100Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -141,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "cols =['sentiment','id','date','query','user','text']\n",
@@ -157,8 +183,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:19:35.631708700Z",
-     "start_time": "2023-10-15T10:19:21.604718200Z"
+     "end_time": "2024-02-12T06:42:48.927803700Z",
+     "start_time": "2024-02-12T06:42:38.645850800Z"
     }
    }
   },
@@ -175,18 +201,18 @@
     "id": "Z9jPx71rm64o",
     "outputId": "29df8392-e201-4b9c-e788-7d8e774828cf",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:19:35.642170300Z",
-     "start_time": "2023-10-15T10:19:35.634706200Z"
+     "end_time": "2024-02-12T06:42:48.953831400Z",
+     "start_time": "2024-02-12T06:42:48.928803700Z"
     }
    },
-   "execution_count": 17,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "   sentiment          id                          date     query  \\\n0          0  1467810369  Mon Apr 06 22:19:45 PDT 2009  NO_QUERY   \n1          0  1467810672  Mon Apr 06 22:19:49 PDT 2009  NO_QUERY   \n2          0  1467810917  Mon Apr 06 22:19:53 PDT 2009  NO_QUERY   \n\n              user                                               text  \n0  _TheSpecialOne_  @switchfoot http://twitpic.com/2y1zl - Awww, t...  \n1    scotthamilton  is upset that he can't update his Facebook by ...  \n2         mattycus  @Kenichan I dived many times for the ball. Man...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sentiment</th>\n      <th>id</th>\n      <th>date</th>\n      <th>query</th>\n      <th>user</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1467810369</td>\n      <td>Mon Apr 06 22:19:45 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>_TheSpecialOne_</td>\n      <td>@switchfoot http://twitpic.com/2y1zl - Awww, t...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>1467810672</td>\n      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>scotthamilton</td>\n      <td>is upset that he can't update his Facebook by ...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>1467810917</td>\n      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>mattycus</td>\n      <td>@Kenichan I dived many times for the ball. Man...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,11 +235,11 @@
    "metadata": {
     "id": "tjBgQKaZnRD4",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:19:35.679685500Z",
-     "start_time": "2023-10-15T10:19:35.643172200Z"
+     "end_time": "2024-02-12T06:42:49.032373Z",
+     "start_time": "2024-02-12T06:42:48.956830900Z"
     }
    },
-   "execution_count": 18,
+   "execution_count": 12,
    "outputs": []
   },
   {
@@ -229,18 +255,18 @@
     "id": "0BfY30g5ngsS",
     "outputId": "77aafb35-fb41-49a8-fb97-c48aa5fc66be",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:19:35.741766900Z",
-     "start_time": "2023-10-15T10:19:35.677578600Z"
+     "end_time": "2024-02-12T06:42:49.057846500Z",
+     "start_time": "2024-02-12T06:42:48.987204200Z"
     }
    },
-   "execution_count": 19,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "   sentiment                                               text\n0          0  @switchfoot http://twitpic.com/2y1zl - Awww, t...\n1          0  is upset that he can't update his Facebook by ...\n2          0  @Kenichan I dived many times for the ball. Man...\n3          0    my whole body feels itchy and like its on fire \n4          0  @nationwideclass no, it's not behaving at all....",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sentiment</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>@switchfoot http://twitpic.com/2y1zl - Awww, t...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>is upset that he can't update his Facebook by ...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>@Kenichan I dived many times for the ball. Man...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>my whole body feels itchy and like its on fire</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>@nationwideclass no, it's not behaving at all....</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,11 +286,11 @@
    "metadata": {
     "id": "n5ssaQU6nmOb",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:57:18.790598Z",
-     "start_time": "2023-10-15T10:57:18.769940800Z"
+     "end_time": "2024-02-12T06:42:49.057846500Z",
+     "start_time": "2024-02-12T06:42:48.995385100Z"
     }
    },
-   "execution_count": 40,
+   "execution_count": 14,
    "outputs": []
   },
   {
@@ -288,17 +314,17 @@
     "id": "cXJvm6heqHhk",
     "outputId": "bd2c627c-e715-4141-d2ab-6921cd636ed0",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:58:23.734678100Z",
-     "start_time": "2023-10-15T10:57:19.961329400Z"
+     "end_time": "2024-02-12T06:43:55.997593600Z",
+     "start_time": "2024-02-12T06:42:50.610364400Z"
     }
    },
-   "execution_count": 41,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thehi\\AppData\\Local\\Temp\\ipykernel_6656\\1337334217.py:2: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "C:\\Users\\thehi\\AppData\\Local\\Temp\\ipykernel_13428\\1337334217.py:2: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  text = BeautifulSoup(text,'html.parser').get_text()\n"
      ]
     }
@@ -306,13 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "[' Awww that s a bummer. You shoulda got David Carr of Third Day to do it. D',\n 'is upset that he can t update his Facebook by texting it... and might cry as a result School today also. Blah!',\n ' I dived many times for the ball. Managed to save The rest go out of bounds',\n 'my whole body feels itchy and like its on fire ',\n ' no it s not behaving at all. i m mad. why am i here? because I can t see you all over there. ']"
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,8 +349,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:58:54.149791300Z",
-     "start_time": "2023-10-15T10:58:54.138629700Z"
+     "end_time": "2024-02-12T06:43:56.006250700Z",
+     "start_time": "2024-02-12T06:43:55.997593600Z"
     }
    }
   },
@@ -354,17 +380,17 @@
     "id": "DR6oMbF8B9Q3",
     "outputId": "a31fc3ac-7904-4c3f-a7ae-3cc179e5628e",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:58:59.899883300Z",
-     "start_time": "2023-10-15T10:58:59.812361400Z"
+     "end_time": "2024-02-12T06:43:56.085642500Z",
+     "start_time": "2024-02-12T06:43:56.001261Z"
     }
    },
-   "execution_count": 43,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
       "text/plain": "{0, 1}"
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# Load the tokenizer from a file\n",
@@ -421,8 +447,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:59:07.169079800Z",
-     "start_time": "2023-10-15T10:59:06.913555600Z"
+     "end_time": "2024-02-12T06:43:56.322333200Z",
+     "start_time": "2024-02-12T06:43:56.086641500Z"
     }
    }
   },
@@ -454,11 +480,11 @@
    "metadata": {
     "id": "KMu91iRVGP9b",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:59:49.026326600Z",
-     "start_time": "2023-10-15T10:59:32.179630500Z"
+     "end_time": "2024-02-12T06:44:11.044977400Z",
+     "start_time": "2024-02-12T06:43:56.332370300Z"
     }
    },
-   "execution_count": 46,
+   "execution_count": 19,
    "outputs": []
   },
   {
@@ -485,11 +511,11 @@
    "metadata": {
     "id": "q3LxFLkbH_P_",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:59:52.144567500Z",
-     "start_time": "2023-10-15T10:59:49.028328900Z"
+     "end_time": "2024-02-12T06:44:14.089124300Z",
+     "start_time": "2024-02-12T06:44:11.045976700Z"
     }
    },
-   "execution_count": 47,
+   "execution_count": 20,
    "outputs": []
   },
   {
@@ -505,11 +531,11 @@
     "id": "b94TAQ5pM6do",
     "outputId": "2b3a620a-a38b-4893-b7ec-b39b623feaed",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:59:52.156291300Z",
-     "start_time": "2023-10-15T10:59:52.145072900Z"
+     "end_time": "2024-02-12T06:44:14.097130600Z",
+     "start_time": "2024-02-12T06:44:14.090122400Z"
     }
    },
-   "execution_count": 48,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -522,7 +548,7 @@
      "data": {
       "text/plain": "array([[  445,    17,    13,     5,  1174,     9,  3429,    50,   836,\n         9439,    15,  1864,    34,     3,    43,     7,   140,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0],\n       [   10,   781,    17,    85,    31,    14,   544,   184,   532,\n          124,  1992,     7,     8,   290,   528,    84,     5,  2301,\n          144,    42,   266,  1117,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0],\n       [    2, 51831,   314,   351,    12,     4,  1228,  1659,     3,\n          896,     4,   468,    41,    36,    15, 22589,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0],\n       [    6,   427,   801,   480,  2868,     8,    38,    69,    16,\n         1143,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0],\n       [   40,     7,    13,    27, 10043,    26,    35,     2,    21,\n          594,   111,    54,     2,    87,   208,     2,    31,    14,\n           66,     9,    35,   132,    68,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0,     0,     0,\n            0,     0,     0,     0,     0,     0,     0]])"
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,11 +572,11 @@
    "metadata": {
     "id": "2npuFQA0JPK6",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:59:56.042053200Z",
-     "start_time": "2023-10-15T10:59:56.016310100Z"
+     "end_time": "2024-02-12T06:44:14.101292500Z",
+     "start_time": "2024-02-12T06:44:14.096130500Z"
     }
    },
-   "execution_count": 49,
+   "execution_count": 22,
    "outputs": []
   },
   {
@@ -562,11 +588,11 @@
    "metadata": {
     "id": "PGHlSIRFKx5C",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:59:56.874443Z",
-     "start_time": "2023-10-15T10:59:56.860519300Z"
+     "end_time": "2024-02-12T06:44:14.110515700Z",
+     "start_time": "2024-02-12T06:44:14.102295Z"
     }
    },
-   "execution_count": 50,
+   "execution_count": 23,
    "outputs": []
   },
   {
@@ -578,11 +604,11 @@
    "metadata": {
     "id": "eFbZArAhLBoU",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:59:57.516521600Z",
-     "start_time": "2023-10-15T10:59:57.403796100Z"
+     "end_time": "2024-02-12T06:44:14.208830300Z",
+     "start_time": "2024-02-12T06:44:14.108513500Z"
     }
    },
-   "execution_count": 51,
+   "execution_count": 24,
    "outputs": []
   },
   {
@@ -653,11 +679,11 @@
    "metadata": {
     "id": "GUMTOPm8PVQe",
     "ExecuteTime": {
-     "end_time": "2023-10-15T10:59:58.781969900Z",
-     "start_time": "2023-10-15T10:59:58.772366800Z"
+     "end_time": "2024-02-12T06:44:14.217685300Z",
+     "start_time": "2024-02-12T06:44:14.213830800Z"
     }
    },
-   "execution_count": 52,
+   "execution_count": 25,
    "outputs": []
   },
   {
@@ -696,11 +722,11 @@
    "metadata": {
     "id": "Cl-ylproTwCj",
     "ExecuteTime": {
-     "end_time": "2023-10-15T11:00:01.900350400Z",
-     "start_time": "2023-10-15T11:00:01.898345900Z"
+     "end_time": "2024-02-12T06:44:14.295368Z",
+     "start_time": "2024-02-12T06:44:14.217685300Z"
     }
    },
-   "execution_count": 53,
+   "execution_count": 26,
    "outputs": []
   },
   {
@@ -726,11 +752,11 @@
    "metadata": {
     "id": "xGqpP1v-UNVc",
     "ExecuteTime": {
-     "end_time": "2023-10-15T11:00:04.393495400Z",
-     "start_time": "2023-10-15T11:00:04.278322800Z"
+     "end_time": "2024-02-12T06:44:14.429125900Z",
+     "start_time": "2024-02-12T06:44:14.297369900Z"
     }
    },
-   "execution_count": 54,
+   "execution_count": 27,
    "outputs": []
   },
   {
@@ -750,11 +776,11 @@
    "metadata": {
     "id": "kGDOa6OhU5ji",
     "ExecuteTime": {
-     "end_time": "2023-10-15T11:00:05.238262100Z",
-     "start_time": "2023-10-15T11:00:05.196343600Z"
+     "end_time": "2024-02-12T06:44:14.448514700Z",
+     "start_time": "2024-02-12T06:44:14.430126100Z"
     }
    },
-   "execution_count": 55,
+   "execution_count": 28,
    "outputs": []
   },
   {
@@ -785,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -807,8 +833,44 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-15T11:00:16.590555200Z",
-     "start_time": "2023-10-15T11:00:16.549682400Z"
+     "end_time": "2024-02-12T06:44:14.492921600Z",
+     "start_time": "2024-02-12T06:44:14.449515300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: NLP-Project-Sentiment\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: NLP-Project-Sentiment\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Assume deepCNN is your model and it's correctly defined and restored from checkpoint\n",
+    "model_dir = 'NLP-Project-Sentiment'  # Directory to save the exported model\n",
+    "\n",
+    "# Save the model in SavedModel format\n",
+    "tf.saved_model.save(ckpt.deepCNN, model_dir)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-12T06:47:10.676231800Z",
+     "start_time": "2024-02-12T06:47:08.905020Z"
     }
    }
   },
@@ -953,11 +1015,11 @@
    "metadata": {
     "id": "PkJAWOAnaAOb",
     "ExecuteTime": {
-     "end_time": "2023-10-15T11:00:29.049801200Z",
-     "start_time": "2023-10-15T11:00:29.046796100Z"
+     "end_time": "2024-02-12T06:46:56.755721500Z",
+     "start_time": "2024-02-12T06:46:56.748790500Z"
     }
    },
-   "execution_count": 59,
+   "execution_count": 31,
    "outputs": []
   },
   {
@@ -979,17 +1041,17 @@
     "id": "JtXniwEnZr2K",
     "outputId": "976fd980-9d58-4a27-e53e-485dd36a717d",
     "ExecuteTime": {
-     "end_time": "2023-10-15T11:00:37.486703900Z",
-     "start_time": "2023-10-15T11:00:29.870778700Z"
+     "end_time": "2024-02-12T06:47:03.442716400Z",
+     "start_time": "2024-02-12T06:46:57.369992900Z"
     }
    },
-   "execution_count": 60,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The result is Positive, [[0.6469231]] confidence\n"
+      "The result is Negative, [[0.6626183]] confidence\n"
      ]
     }
    ]
